[tool.poetry]
name = "py_entitymatching"
version = "0.1.0"
description = ""
authors = ["Øyvind Samuelsen <oyvinsam@stud.ntnu.no>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
